<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Doc_app</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="title">Name - Date - Time</string>
    <string name="upload">Upload File</string>
    <string name="takepic">Take Picture</string>
    <string name="ret">Return</string>
    <string name="label_p_detail">Detail Of The Appointment</string>
    <string name="doc_title">Document Name - Type - Date Time</string>
    <string name="back_to_appointment">Back To Appointment</string>
    <string name="info_profile">Personal Profile</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="sex">Sex</string>
    <string name="phone">Phone</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="f_cancel_apmt">Cancel Appointment</string>
    <string name="add">Address</string>
    <string name="special">Speciality</string>
    <string name="appointment_scheduler">Appointment Scheduler</string>
    <string name="user_name">User Name</string>
    <string name="log_in">Log In</string>
    <string name="doctor_log_in">Doctor Log In</string>
    <string name="future">Future</string>
    <string name="past">Past</string>
    <string name="info">Info</string>

</resources>
