<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">
        <TextView
            android:textSize="20dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/info_profile" />
        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp" >
            <TableRow>
                <TextView
                    android:textSize="20dp"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/name" />
                <EditText
                    android:id="@+id/name"
                    android:textSize="20dp"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:ems="5"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:textSize="20dp"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/age" />
                <EditText
                    android:id="@+id/age"
                    android:textSize="20dp"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content" />
            </TableRow>
            <TableRow>
                <TextView
                    android:textSize="20dp"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/phone" />
                <EditText
                    android:id="@+id/phone"
                    android:textSize="20dp"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content" />
            </TableRow>
            <TableRow>
                <TextView
                    android:textSize="20dp"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/add" />
                <EditText
                    android:id="@+id/add"
                    android:textSize="20dp"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content" />
            </TableRow>
            <TableRow>
                <TextView
                    android:textSize="20dp"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/special" />
                <EditText
                    android:id="@+id/special"
                    android:textSize="20dp"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content" />
            </TableRow>
        </TableLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="300dp" >
        <Button
            android:id="@+id/info_cancel"
            android:layout_height="wrap_content"
            android:layout_width="150dp"
            android:text="@string/cancel"/>
        <Button
            android:id="@+id/info_confirm"
            android:layout_height="wrap_content"
            android:layout_width="150dp"
            android:text="@string/confirm"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:gravity="center">
        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="future"
            android:text="@string/future" />

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="past"
            android:text="@string/past" />
        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="info"
            android:text="@string/info" />
    </LinearLayout>
</RelativeLayout>

